fix spacing between flex service items

--- a/flexbox/4-styles.css
+++ b/flexbox/4-styles.css
@@ -353,7 +353,7 @@ ul.row {
 }
 
 .col-1-2 {
-  width: 50%;
+  width: calc((100% / 2) - 2rem);
 }
 
 /* Navbar
